Bug 408838. Native JSON. r/sr=shaver
UltraBlame original commit: 4d331883f18d0c60463c5a9c2fe49e8f6fd1b02b

--- a/dom/src/json/test/Makefile.in
+++ b/dom/src/json/test/Makefile.in
@@ -412,6 +412,15 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+dom
+/
+src
+/
+json
+/
+test
 include
 (
 DEPTH
@@ -438,3 +447,44 @@ config
 rules
 .
 mk
+_TEST_FILES
+=
+test_json
+.
+html
+\
+(
+NULL
+)
+libs
+:
+:
+(
+_TEST_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+tests
+/
+(
+relativesrcdir
+)
