--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -474,6 +474,10 @@ nsIAccessible_selects
 .
 js
 \
+nsIAccessible_states
+.
+js
+\
 nsIAccessibleEditableText
 .
 js
@@ -532,6 +536,10 @@ test_nsIAccessible_name
 xul
 \
 test_nsIAccessible_selects
+.
+html
+\
+test_nsIAccessible_states
 .
 html
 \
