Bug 454997 - <body contenteditable=true> exposed incorrectly, r=marcoz, aaronlev
UltraBlame original commit: 851c5da59738ee9d24a76cad3547ff585eaf0dbd

--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -527,6 +527,14 @@ test_nsIAccessible_actions
 .
 xul
 \
+test_nsIAccessible_editablebody
+.
+html
+\
+test_nsIAccessible_editabledoc
+.
+html
+\
 test_nsIAccessible_name
 .
 html
