--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -527,6 +527,10 @@ test_nsIAccessible_actions
 .
 xul
 \
+test_nsIAccessible_applicationAccessible
+.
+html
+\
 test_nsIAccessible_editablebody
 .
 html
