bug 457082, configure --disable-compile-environment busted on windows, atl etc, r=ted
UltraBlame original commit: 2bf271f5e732ad71a4d27933cd53d7504c20eb31

--- a/configure.in
+++ b/configure.in
@@ -41130,6 +41130,15 @@ n
 "
 ACCESSIBILITY
 "
+-
+a
+"
+COMPILE_ENVIRONMET
+"
+=
+"
+1
+"
 ;
 then
 case
@@ -48014,6 +48023,17 @@ disabled
 fi
 if
 test
+"
+COMPILE_ENVIRONMENT
+"
+=
+"
+1
+"
+;
+then
+if
+test
 -
 n
 "
@@ -48114,6 +48134,7 @@ fi
 ;
 ;
 esac
+fi
 fi
 dnl
 =
@@ -48846,6 +48867,15 @@ test
 -
 n
 "
+COMPILE_ENVIRONMENT
+"
+;
+then
+if
+test
+-
+n
+"
 MOZ_DISABLE_VISTA_SDK_REQUIREMENTS
 "
 ;
@@ -48971,6 +49001,7 @@ fi
 ;
 ;
 esac
+fi
 fi
 AC_SUBST
 (
