--- a/xpcom/proxy/tests/Makefile.in
+++ b/xpcom/proxy/tests/Makefile.in
@@ -438,11 +438,39 @@ cpp
 (
 NULL
 )
+CPP_UNIT_TESTS
++
+=
+\
+proxytests
+.
+cpp
+\
+proxy
+-
+create
+-
+threadsafety
+.
+cpp
+\
+(
+NULL
+)
 XPIDLSRCS
 =
+\
 nsITestProxy
 .
 idl
+\
+nsITestProxyOrig
+.
+idl
+\
+(
+NULL
+)
 SIMPLE_PROGRAMS
 =
 (
