Bug 455213: Plugins get enabled when updating to Firefox 3.1. r=jst, r=josh
UltraBlame original commit: 62274f98ccf834fef92e40f9b6afc9e235ab3596

--- a/modules/plugin/test/Makefile.in
+++ b/modules/plugin/test/Makefile.in
@@ -420,10 +420,18 @@ autoconf
 mk
 MODULE
 =
-plugin
+test_plugin
 DIRS
 =
 testplugin
+XPCSHELL_TESTS
+=
+\
+unit
+\
+(
+NULL
+)
 include
 (
 topsrcdir
