Backing out changeset 62274f98ccf8 from bug 455213 due to test failures
UltraBlame original commit: 2ab95180da6d0920307d06f1061486a504757aff

--- a/modules/plugin/test/Makefile.in
+++ b/modules/plugin/test/Makefile.in
@@ -420,18 +420,10 @@ autoconf
 mk
 MODULE
 =
-test_plugin
+plugin
 DIRS
 =
 testplugin
-XPCSHELL_TESTS
-=
-\
-unit
-\
-(
-NULL
-)
 include
 (
 topsrcdir
