--- a/configure.in
+++ b/configure.in
@@ -51075,6 +51075,25 @@ AC_DEFINE
 (
 NS_OSSO
 )
+dnl
+XXX
+this
+should
+go
+somewhere
+else
+;
+it
+'
+s
+not
+just
+for
+OSSO
+AC_DEFINE
+(
+MOZ_GFX_OPTIMIZE_MOBILE
+)
 fi
 AC_SUBST
 (
