Bug 365467 Focus contollers initial window and element can get out of sync r+sr=jst Reordering tests to see if that can make the change stick
UltraBlame original commit: 0e52c4677cb4f4cf54b83c578292a81ec53f2df6

--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -505,11 +505,11 @@ browser_bug413915
 .
 js
 \
-browser_autodiscovery
+browser_bug420160
 .
 js
 \
-browser_bug420160
+browser_bug427559
 .
 js
 \
@@ -517,7 +517,11 @@ browser_bug441778
 .
 js
 \
-autodiscovery
+browser_discovery
+.
+js
+\
+discovery
 .
 html
 \
@@ -563,34 +567,6 @@ _BROWSER_FILES
 +
 =
 browser_customize
-.
-js
-\
-(
-NULL
-)
-endif
-#
-disable
-tests
-on
-linux
-for
-now
-.
-.
-ifneq
-(
-(
-OS_ARCH
-)
-Linux
-)
-_BROWSER_FILES
-+
-=
-\
-browser_bug427559
 .
 js
 \
