--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -603,6 +603,10 @@ test_nsIAccessibleTable_listboxes
 .
 xul
 \
+test_nsIAccessNode_invalidation
+.
+html
+\
 test_nsIAccessNode_utils
 .
 html
@@ -632,10 +636,6 @@ test_bug428479
 html
 \
 test_bug429285
-.
-html
-\
-test_bug434464
 .
 html
 \
