Bug 413909 - nsCertOverrideService IDN handling is broken; tests; r=kaie
UltraBlame original commit: 097bf47abbcde2ba53c62212eca60c5cb5d9ce9d

--- a/security/manager/ssl/tests/Makefile.in
+++ b/security/manager/ssl/tests/Makefile.in
@@ -192,13 +192,13 @@ s
 )
 :
 #
-Brian
-Ryner
+Jan
+Bambas
 <
-bryner
-brianryner
+honzab
+firemni
 .
-com
+cz
 >
 #
 #
@@ -401,6 +401,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -415,9 +418,10 @@ MODULE
 pipnss
 DIRS
 =
-src
-public
-tests
+mochitest
+XPCSHELL_TESTS
+=
+unit
 include
 (
 topsrcdir
