--- a/security/manager/ssl/tests/mochitest/Makefile.in
+++ b/security/manager/ssl/tests/mochitest/Makefile.in
@@ -158,9 +158,8 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+Mozilla
+Foundation
 .
 #
 Portions
@@ -174,7 +173,7 @@ Copyright
 (
 C
 )
-1998
+2007
 #
 the
 Initial
@@ -192,13 +191,13 @@ s
 )
 :
 #
-Brian
-Ryner
+Jan
+Bambas
 <
-bryner
-brianryner
+honzab
+firemni
 .
-com
+cz
 >
 #
 #
@@ -217,6 +216,7 @@ terms
 of
 #
 either
+of
 the
 GNU
 General
@@ -232,8 +232,8 @@ the
 GPL
 "
 )
-or
 #
+or
 the
 GNU
 Lesser
@@ -401,6 +401,12 @@ DEPTH
 /
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -410,14 +416,21 @@ srcdir
 VPATH
 =
 srcdir
-MODULE
+relativesrcdir
 =
-pipnss
-DIRS
-=
-src
-public
-tests
+security
+/
+ssl
+include
+(
+DEPTH
+)
+/
+config
+/
+autoconf
+.
+mk
 include
 (
 topsrcdir
@@ -428,3 +441,45 @@ config
 rules
 .
 mk
+_CHROME_FILES
+=
+\
+test_bug413909
+.
+html
+\
+(
+NULL
+)
+libs
+:
+:
+(
+_CHROME_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+chrome
+/
+(
+relativesrcdir
+)
