Bug 456894 -  runtests.py can't handle negative leaks. r=dbaron, r=ted
UltraBlame original commit: 5fabcd7363bfcf48dbf535a833a9ad281df0a248

--- a/testing/mochitest/runtests.py.in
+++ b/testing/mochitest/runtests.py.in
@@ -2989,6 +2989,8 @@ P
 <
 size
 >
+-
+?
 \
 d
 +
@@ -3002,6 +3004,8 @@ P
 <
 bytesLeaked
 >
+-
+?
 \
 d
 +
@@ -3024,6 +3028,8 @@ P
 <
 numLeaked
 >
+-
+?
 \
 d
 +
@@ -3071,17 +3077,19 @@ group
 name
 "
 )
-if
+size
+=
+int
+(
+matches
+.
+group
+(
 "
-TOTAL
+size
 "
-=
-=
-name
-:
-seenTotal
-=
-True
+)
+)
 bytesLeaked
 =
 int
@@ -3095,6 +3103,64 @@ bytesLeaked
 "
 )
 )
+numLeaked
+=
+int
+(
+matches
+.
+group
+(
+"
+numLeaked
+"
+)
+)
+if
+size
+<
+0
+or
+bytesLeaked
+<
+0
+or
+numLeaked
+<
+0
+:
+log
+.
+info
+(
+"
+TEST
+-
+UNEXPECTED
+-
+FAIL
+|
+runtests
+-
+leaks
+|
+negative
+leaks
+caught
+!
+"
+)
+if
+"
+TOTAL
+"
+=
+=
+name
+:
+seenTotal
+=
+True
 if
 bytesLeaked
 >
@@ -3203,19 +3269,6 @@ detected
 )
 else
 :
-numLeaked
-=
-int
-(
-matches
-.
-group
-(
-"
-numLeaked
-"
-)
-)
 if
 numLeaked
 !
