Bug 394611 - Always prompt the user before changing a stored password. r=gavin
UltraBlame original commit: 2f36cde1694c7f19488a10cbb6f15e38f3f1f02e

--- a/toolkit/components/passwordmgr/test/Makefile.in
+++ b/toolkit/components/passwordmgr/test/Makefile.in
@@ -556,6 +556,10 @@ prompt_common
 .
 js
 \
+notification_common
+.
+js
+\
 authenticate
 .
 sjs
@@ -585,6 +589,18 @@ subtst_notifications_5
 html
 \
 subtst_notifications_6
+.
+html
+\
+subtst_notifications_8
+.
+html
+\
+subtst_notifications_9
+.
+html
+\
+subtst_notifications_10
 .
 html
 \
