Bug 444801 - Implement pref support on snav; r=(doug.turner + mark.finkle)
UltraBlame original commit: 733d4a419520a68bc1e0a9d7e01ad5dc4e11010e

--- a/toolkit/spatial-navigation/tests/Makefile.in
+++ b/toolkit/spatial-navigation/tests/Makefile.in
@@ -457,6 +457,18 @@ xul
 \
 chrome
 /
+test_snav_prefDisabled
+.
+xul
+\
+chrome
+/
+test_snav_prefKeyCode
+.
+xul
+\
+chrome
+/
 SpatialNavUtils
 .
 js
