Don't insert a <br> when deleting all content in an inline contenteditable element. b=456244 r+sr=peterv
UltraBlame original commit: 035cf0234960e618eeef062d9187bacdb5dc5cfd

--- a/editor/libeditor/html/tests/Makefile.in
+++ b/editor/libeditor/html/tests/Makefile.in
@@ -158,9 +158,8 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+Mozilla
+Foundation
 .
 #
 Portions
@@ -174,7 +173,7 @@ Copyright
 (
 C
 )
-1998
+2008
 #
 the
 Initial
@@ -393,6 +392,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -402,6 +404,15 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+editor
+/
+libeditor
+/
+html
+/
+tests
 include
 (
 DEPTH
@@ -412,194 +423,6 @@ config
 autoconf
 .
 mk
-ifdef
-ENABLE_TESTS
-DIRS
-+
-=
-tests
-endif
-MODULE
-=
-editor
-LIBRARY_NAME
-=
-htmleditor_s
-LIBXUL_LIBRARY
-=
-1
-REQUIRES
-=
-xpcom
-\
-string
-\
-dom
-\
-js
-\
-layout
-\
-locale
-\
-unicharutil
-\
-content
-\
-txmgr
-\
-txtsvc
-\
-htmlparser
-\
-necko
-\
-pref
-\
-gfx
-\
-thebes
-\
-widget
-\
-view
-\
-webshell
-\
-(
-NULL
-)
-#
-Building
-the
-full
-blown
-HTML
-Editor
-so
-add
-its
-source
-files
-and
-objects
-:
-CPPSRCS
-=
-\
-nsEditProperty
-.
-cpp
-\
-nsHTMLAbsPosition
-.
-cpp
-\
-nsHTMLAnonymousUtils
-.
-cpp
-\
-nsHTMLDataTransfer
-.
-cpp
-\
-nsHTMLCSSUtils
-.
-cpp
-\
-nsHTMLEditor
-.
-cpp
-\
-nsHTMLEditorStyle
-.
-cpp
-\
-nsHTMLEditRules
-.
-cpp
-\
-nsHTMLEditUtils
-.
-cpp
-\
-nsHTMLObjectResizer
-.
-cpp
-\
-nsHTMLEditorMouseListener
-.
-cpp
-\
-nsHTMLInlineTableEditor
-.
-cpp
-\
-nsHTMLURIRefObject
-.
-cpp
-\
-nsTableEditor
-.
-cpp
-\
-nsWSRunObject
-.
-cpp
-\
-TypeInState
-.
-cpp
-\
-TextEditorTest
-.
-cpp
-\
-(
-NULL
-)
-ifdef
-ENABLE_EDITOR_API_LOG
-CPPSRCS
-+
-=
-nsHTMLEditorLog
-.
-cpp
-\
-nsEditorTxnLog
-.
-cpp
-\
-(
-NULL
-)
-DEFINES
-+
-=
--
-DENABLE_EDITOR_API_LOG
-endif
-#
-don
-'
-t
-want
-the
-shared
-lib
-;
-force
-the
-creation
-of
-a
-static
-lib
-.
-FORCE_STATIC_LIB
-=
-1
 include
 (
 topsrcdir
@@ -610,45 +433,45 @@ config
 rules
 .
 mk
-INCLUDES
-+
+_TEST_FILES
 =
--
-I
-(
-topsrcdir
-)
-/
-editor
-/
-libeditor
-/
-base
 \
--
-I
-(
-topsrcdir
-)
-/
-editor
-/
-libeditor
-/
-text
-\
--
-I
-(
-topsrcdir
-)
-/
-content
-/
-base
-/
-src
+test_bug456244
+.
+html
 \
 (
 NULL
+)
+libs
+:
+:
+(
+_TEST_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+tests
+/
+(
+relativesrcdir
 )
