Ensure that documentURI and baseURI is correct for XHR created documents. For cross-site loaded XHR documents make the two URIs that of the loading page, just to be on the safe side.
r/sr=bz b=459470

UltraBlame original commit: ee5135f3f7739eae82491aa3fa30e1d852fbc61b

--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -1161,6 +1161,32 @@ file_CrossSiteXHR_cache_server
 .
 sjs
 \
+test_XHRDocURI
+.
+html
+\
+file_XHRDocURI
+.
+xml
+\
+file_XHRDocURI
+.
+xml
+^
+headers
+^
+\
+file_XHRDocURI
+.
+text
+\
+file_XHRDocURI
+.
+text
+^
+headers
+^
+\
 (
 NULL
 )
