Bug 448564.  Better handling of sink context switches.  r=mrbkap, sr=bzbarsky
UltraBlame original commit: 39f61d918daeea4e4c34dd458914b3fdaa22f8f3

--- a/content/html/document/test/Makefile.in
+++ b/content/html/document/test/Makefile.in
@@ -567,6 +567,46 @@ test_documentAll
 .
 html
 \
+test_bug448564
+.
+html
+\
+bug448564
+-
+iframe
+-
+1
+.
+html
+\
+bug448564
+-
+iframe
+-
+2
+.
+html
+\
+bug448564
+-
+iframe
+-
+3
+.
+html
+\
+bug448564
+-
+echo
+.
+sjs
+\
+bug448564
+-
+submit
+.
+js
+\
 (
 NULL
 )
