Bug 398928 - Allow moving a window by dragging toolbar or statusbar, r=enndeakin
UltraBlame original commit: 151e51ec625e910335112572d678bdc9fecd6ad8

--- a/toolkit/content/Makefile.in
+++ b/toolkit/content/Makefile.in
@@ -694,9 +694,18 @@ tests
 endif
 EXTRA_JS_MODULES
 =
+\
 debug
 .
 js
+\
+WindowDraggingUtils
+.
+jsm
+\
+(
+NULL
+)
 EXTRA_PP_JS_MODULES
 =
 debug
