--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -427,6 +427,9 @@ chrome
 (
 NULL
 )
+MODULE
+=
+content
 CPP_UNIT_TESTS
 +
 =
@@ -503,6 +506,14 @@ XPCOM_GLUE_LDOPTS
 (
 NSPR_LIBS
 )
+\
+(
+NULL
+)
+XPCSHELL_TESTS
+=
+\
+unit
 \
 (
 NULL
@@ -917,6 +928,86 @@ test_bug421602
 html
 \
 test_bug422537
+.
+html
+\
+test_bug424359
+-
+1
+.
+html
+\
+file_htmlserializer_1
+.
+html
+\
+file_htmlserializer_1_bodyonly
+.
+html
+\
+file_htmlserializer_1_format
+.
+html
+\
+file_htmlserializer_1_linebreak
+.
+html
+\
+file_htmlserializer_1_links
+.
+html
+\
+file_htmlserializer_1_noflag
+.
+html
+\
+file_htmlserializer_1_noformatpre
+.
+html
+\
+file_htmlserializer_1_raw
+.
+html
+\
+file_htmlserializer_1_nested_body
+.
+html
+\
+file_htmlserializer_1_sibling_body
+.
+html
+\
+file_htmlserializer_1_sibling_body_only_body
+.
+html
+\
+file_htmlserializer_1_no_body
+.
+html
+\
+test_bug424359
+-
+2
+.
+html
+\
+file_htmlserializer_2
+.
+html
+\
+file_htmlserializer_2_basic
+.
+html
+\
+file_htmlserializer_2_enthtml
+.
+html
+\
+file_htmlserializer_2_entw3c
+.
+html
+\
+file_htmlserializer_2_latin1
 .
 html
 \
