Bug 457091 - (crash) fennec m8 deb packages fail to install; r=blassey
UltraBlame original commit: e661930b3421eeba4529d0acd684b1c1b11d6ed3

--- a/xulrunner/installer/Makefile.in
+++ b/xulrunner/installer/Makefile.in
@@ -1147,23 +1147,44 @@ z
 DEFINES
 +
 =
+\
 -
 DGRE_MILESTONE
 =
 (
 GRE_MILESTONE
 )
+\
 -
 DGRE_BUILDID
 =
 (
 GRE_BUILDID
 )
+\
 -
 DMOZ_DEB_TIMESTAMP
 =
 (
 MOZ_DEB_TIMESTAMP
+)
+\
+-
+DMOZ_APP_NAME
+=
+(
+MOZ_APP_NAME
+)
+\
+-
+Dinstalldir
+=
+(
+installdir
+)
+\
+(
+NULL
 )
 ifeq
 (
@@ -1222,11 +1243,122 @@ ACDEFINES
 )
 ^
 >
+debian
+/
+xulrunner
+.
+links
+:
+(
+srcdir
+)
+/
+debian
+/
+xulrunner
+.
+links
+.
+in
+(
+PYTHON
+)
+(
+topsrcdir
+)
+/
+config
+/
+Preprocessor
+.
+py
+\
+(
+AUTOMATION_PPARGS
+)
+(
+DEFINES
+)
+(
+ACDEFINES
+)
+^
+>
+debian
+/
+xulrunner
+.
+service
+:
+(
+srcdir
+)
+/
+debian
+/
+xulrunner
+.
+service
+.
+in
+(
+PYTHON
+)
+(
+topsrcdir
+)
+/
+config
+/
+Preprocessor
+.
+py
+\
+(
+AUTOMATION_PPARGS
+)
+(
+DEFINES
+)
+(
+ACDEFINES
+)
+^
+>
+package
+:
+(
+MAKE
+)
+package
+-
+C
+(
+DEPTH
+)
 deb
 :
+package
 debian
 /
 changelog
+debian
+/
+xulrunner
+.
+service
+debian
+/
+xulrunner
+.
+links
+(
+MOZILLA_VERSION
+)
+.
+system
+.
+conf
 (
 NSINSTALL
 )
@@ -1244,16 +1376,10 @@ debian
 .
 rm
 -
-rf
+fr
 (
 DEBDESTDIR
 )
-/
-usr
-/
-local
-/
-*
 (
 NSINSTALL
 )
@@ -1262,20 +1388,27 @@ D
 (
 DEBDESTDIR
 )
-/
-usr
-/
-local
+(
+installdir
+)
 cd
 (
 DEBDESTDIR
 )
 /
-usr
-/
-local
+(
+installdir
+)
 ;
-cat
+cp
+-
+pRL
+.
+.
+/
+.
+.
+/
 .
 .
 /
@@ -1295,18 +1428,11 @@ DEPTH
 dist
 /
 (
-PKG_PATH
+MOZ_BUILD_APP
 )
-(
-PKG_BASENAME
-)
-(
-PKG_SUFFIX
-)
-|
-(
-UNMAKE_PACKAGE
-)
+/
+*
+.
 (
 NSINSTALL
 )
@@ -1357,17 +1483,40 @@ MOZ_BUILD_APP
 )
 .
 service
+(
+NSINSTALL
+)
+-
+D
+(
+DEBDESTDIR
+)
+(
+regdir
+)
+(
+SYSINSTALL
+)
+(
+MOZILLA_VERSION
+)
+.
+system
+.
+conf
+(
+DEBDESTDIR
+)
+(
+regdir
+)
+/
 rm
 (
 DEBDESTDIR
 )
-/
-usr
-/
-local
-/
 (
-MOZ_BUILD_APP
+installdir
 )
 /
 xpidl
