--- a/xulrunner/installer/debian/xulrunner.service.in
+++ b/xulrunner/installer/debian/xulrunner.service.in
@@ -1,3 +1,6 @@
+#
+filter
+substitution
 [
 D
 -
@@ -10,14 +13,9 @@ org
 .
 mozilla
 .
-xulrunner
+MOZ_APP_NAME
 Exec
 =
-/
-usr
-/
-local
-/
-xulrunner
+installdir
 /
 xulrunner
