Bug 458735 - Improve internal API for traceable natives (r=brendan, nanojit r=edwsmith)
UltraBlame original commit: 408373135eb3d4a51e6c8da91b270a460f9f3b08

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -1110,6 +1110,14 @@ EXPORTS
 +
 =
 \
+builtins
+.
+tbl
+\
+jsbuiltins
+.
+h
+\
 Assembler
 .
 h
@@ -1119,10 +1127,6 @@ LIR
 h
 \
 avmplus
-.
-h
-\
-vm_fops
 .
 h
 \
@@ -1149,9 +1153,9 @@ nanojit
 .
 h
 \
-builtins
+TraceTreeDrawer
 .
-tbl
+h
 \
 (
 NULL
@@ -1200,12 +1204,6 @@ NULL
 )
 ifdef
 DEBUG
-EXPORTS
-+
-=
-TraceTreeDrawer
-.
-h
 CPPSRCS
 +
 =
