Bug 459329 Download Manager should honour --disable-vista-sdk-requirements r=sdwilsh
UltraBlame original commit: 3f06978bdc9e85744cf26876b69e2e7a3fe90051

--- a/toolkit/components/downloads/src/Makefile.in
+++ b/toolkit/components/downloads/src/Makefile.in
@@ -494,6 +494,8 @@ cpp
 NULL
 )
 ifndef
+MOZ_DISABLE_VISTA_SDK_REQUIREMENTS
+ifndef
 GNU_CXX
 ifeq
 (
@@ -512,6 +514,12 @@ REQUIRES
 +
 =
 xulapp
+DEFINES
++
+=
+-
+DDOWNLOAD_SCANNER
+endif
 endif
 endif
 EXTRA_COMPONENTS
