--- a/media/libsydneyaudio/include/Makefile.in
+++ b/media/libsydneyaudio/include/Makefile.in
@@ -398,6 +398,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -419,13 +422,7 @@ autoconf
 mk
 MODULE
 =
-oggplay_audio
-LIBRARY_NAME
-=
-oggplay_audio
-FORCE_STATIC_LIB
-=
-1
+sydneyaudio
 EXPORTS
 =
 \
@@ -436,93 +433,6 @@ h
 (
 NULL
 )
-ifeq
-(
-(
-OS_ARCH
-)
-Linux
-)
-CSRCS
-=
-\
-sydney_audio_alsa
-.
-c
-\
-(
-NULL
-)
-endif
-ifneq
-(
-(
-filter
-WINNT
-WINCE
-(
-OS_ARCH
-)
-)
-)
-CSRCS
-=
-\
-sydney_audio_waveapi
-.
-c
-\
-(
-NULL
-)
-endif
-ifeq
-(
-(
-OS_ARCH
-)
-Darwin
-)
-CSRCS
-=
-\
-sydney_audio_mac
-.
-c
-\
-(
-NULL
-)
-OS_LIBS
-+
-=
--
-framework
-CoreAudio
--
-framework
-AudioToolbox
--
-framework
-AudioUnit
--
-framework
-Carbon
-endif
-ifeq
-(
-(
-OS_ARCH
-)
-WINNT
-)
-OS_LIBS
-+
-=
-winmm
-.
-lib
-endif
 include
 (
 topsrcdir
@@ -533,10 +443,3 @@ config
 rules
 .
 mk
-LOCAL_INCLUDES
-=
--
-I
-(
-srcdir
-)
