Bug 460382 - Linux Firefox test boxes don't error on mochitest leaks; (Av1) No leaks on Linux too; r=ted.mielczarek
UltraBlame original commit: 5d95abb2eb1fcd2faa7de220ebad62c20fecd590

--- a/testing/mochitest/runtests.py.in
+++ b/testing/mochitest/runtests.py.in
@@ -3671,27 +3671,12 @@ pass
 else
 :
 #
-We
-leak
-nothing
-on
-Windows
-or
-OS
-X
-running
-normal
+Normal
 Mochitests
-.
-if
-automation
-.
-IS_MAC
-or
-automation
-.
-IS_WIN32
 :
+no
+leaks
+.
 options
 .
 leakThreshold
