Bug 449159 - Refactor Ogg backend and implement seeking - r+sr=roc
UltraBlame original commit: f941129cae018854f6b39f8b2bb65a8ebf419216

--- a/content/media/video/src/Makefile.in
+++ b/content/media/video/src/Makefile.in
@@ -425,19 +425,6 @@ autoconf
 mk
 ifdef
 MOZ_OGG
-ifeq
-(
-(
-OS_ARCH
-)
-Linux
-)
-DEFINES
-+
-=
--
-DSYDNEY_AUDIO_NO_POSITION
-endif
 ifneq
 (
 (
@@ -536,7 +523,7 @@ NULL
 CPPSRCS
 =
 \
-nsVideoDecoder
+nsMediaDecoder
 .
 cpp
 \
@@ -554,6 +541,14 @@ nsAudioStream
 cpp
 \
 nsChannelReader
+.
+cpp
+\
+nsChannelToPipeListener
+.
+cpp
+\
+nsMediaStream
 .
 cpp
 \
