--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -1195,17 +1195,33 @@ test_bug459424
 .
 html
 \
+(
+NULL
+)
+#
+Disabled
+for
+now
+.
+Mochitest
+isn
+'
+t
+reliable
+enough
+for
+these
+.
+#
 test_bug444546
 .
 html
 \
+#
 bug444546
 .
 sjs
 \
-(
-NULL
-)
 libs
 :
 :
