bug 458014,  refactor browser/locales/Makefile.in, support both manifests in JarMaker.py, r=ted
UltraBlame original commit: 489b5d339c202875b6995fa116aa1a1673fd7503

--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -461,6 +461,46 @@ LOCALE_SRCDIR
 )
 /
 searchplugins
+ifdef
+LOCALE_MERGEDIR
+vpath
+crashreporter
+%
+.
+ini
+(
+LOCALE_MERGEDIR
+)
+/
+browser
+/
+crashreporter
+endif
+vpath
+crashreporter
+%
+.
+ini
+(
+LOCALE_SRCDIR
+)
+/
+crashreporter
+ifdef
+LOCALE_MERGEDIR
+vpath
+crashreporter
+%
+.
+ini
+srcdir
+/
+en
+-
+US
+/
+crashreporter
+endif
 run_for_effects
 :
 =
@@ -1407,10 +1447,89 @@ microsummary
 -
 generators
 endif
+tests
+:
+ifneq
+(
+en
+-
+US
+(
+AB_CD
+)
+)
+echo
+"
+Verifying
+(
+AB_CD
+)
+installer
+variable
+usage
+"
+(
+PERL
+)
+(
+topsrcdir
+)
+/
+toolkit
+/
+mozapps
+/
+installer
+/
+windows
+/
+nsis
+/
+check
+-
+locales
+.
+pl
+(
+LOCALE_SRCDIR
+)
+/
+installer
+endif
+clobber
+-
+%
+:
+(
+RM
+)
+-
+rf
+(
+DIST
+)
+/
+xpi
+-
+stage
+/
+locale
+-
+*
 libs
 -
 %
 :
+(
+NSINSTALL
+)
+-
+D
+(
+DIST
+)
+/
+install
 (
 MAKE
 )
@@ -1428,6 +1547,9 @@ locales
 libs
 -
 *
+BOTH_MANIFESTS
+=
+1
 (
 MAKE
 )
@@ -1453,6 +1575,9 @@ XPI_NAME
 locale
 -
 *
+BOTH_MANIFESTS
+=
+1
 (
 MAKE
 )
@@ -1477,6 +1602,9 @@ XPI_NAME
 locale
 -
 *
+BOTH_MANIFESTS
+=
+1
 (
 MAKE
 )
@@ -1494,6 +1622,9 @@ PREF_DIR
 defaults
 /
 pref
+BOTH_MANIFESTS
+=
+1
 ifdef
 MOZ_BRANDING_DIRECTORY
 (
@@ -1518,7 +1649,17 @@ XPI_NAME
 locale
 -
 *
+BOTH_MANIFESTS
+=
+1
 endif
+(
+MAKE
+)
+tests
+AB_CD
+=
+*
 ifneq
 (
 (
@@ -1649,53 +1790,6 @@ WIN32_INSTALLER_IN
 (
 SUBMAKEFILES
 )
-ifneq
-(
-en
--
-US
-(
-AB_CD
-)
-)
-echo
-"
-Verifying
-(
-AB_CD
-)
-installer
-variable
-usage
-"
-(
-PERL
-)
-(
-topsrcdir
-)
-/
-toolkit
-/
-mozapps
-/
-installer
-/
-windows
-/
-nsis
-/
-check
--
-locales
-.
-pl
-(
-LOCALE_SRCDIR
-)
-/
-installer
-endif
 echo
 "
 Repackaging
@@ -1773,7 +1867,11 @@ rf
 l10n
 -
 stage
-mkdir
+(
+NSINSTALL
+)
+-
+D
 l10n
 -
 stage
@@ -1809,33 +1907,9 @@ stage
 setup
 .
 exe
-(
-RM
-)
+cp
 -
-rf
-(
-DIST
-)
-/
-xpi
--
-stage
-/
-locale
--
-(
-AB_CD
-)
-(
-MAKE
-)
-libs
--
-(
-AB_CD
-)
-mv
+r
 (
 DIST
 )
@@ -2030,6 +2104,13 @@ chmod
 (
 WIN32_INSTALLER_OUT
 )
+ifeq
+(
+WINNT
+(
+OS_ARCH
+)
+)
 repackage
 -
 win32
@@ -2063,6 +2144,9 @@ installer
 (
 WIN32_INSTALLER_IN
 )
+libs
+-
+%
 (
 MAKE
 )
@@ -2079,6 +2163,17 @@ WIN32_INSTALLER_IN
 (
 WIN32_INSTALLER_IN
 )
+else
+repackage
+-
+win32
+-
+installer
+-
+%
+:
+;
+endif
 ifneq
 (
 (
@@ -2126,11 +2221,21 @@ stage
 MOZ_PKG_APPNAME
 )
 endif
-repackage
--
-zip
+(
+STAGEDIST
+)
 :
-ZIP_OUT
+AB_CD
+:
+=
+en
+-
+US
+(
+STAGEDIST
+)
+:
+UNPACKAGE
 =
 (
 _ABS_DIST
@@ -2139,27 +2244,45 @@ _ABS_DIST
 (
 PACKAGE
 )
-repackage
--
-zip
-:
-UNPACKAGE
-=
 (
-ZIP_IN
+STAGEDIST
 )
-repackage
--
-zip
 :
 (
-ZIP_IN
+_ABS_DIST
 )
+/
 (
-RM
+PACKAGE
 )
+#
+only
+mac
+needs
+to
+remove
+the
+parent
+of
+STAGEDIST
+.
+.
+.
+ifneq
+(
+(
+filter
+mac
+cocoa
+(
+MOZ_WIDGET_TOOLKIT
+)
+)
+)
+if
+test
 -
-r
+d
 (
 DIST
 )
@@ -2167,7 +2290,84 @@ DIST
 l10n
 -
 stage
-mkdir
+;
+then
+\
+(
+RM
+)
+-
+r
+-
+v
+(
+DIST
+)
+/
+l10n
+-
+stage
+;
+\
+fi
+else
+#
+.
+.
+.
+and
+windows
+doesn
+'
+t
+like
+removing
+STAGEDIST
+itself
+remove
+all
+children
+if
+test
+-
+d
+(
+DIST
+)
+/
+l10n
+-
+stage
+;
+then
+\
+find
+(
+STAGEDIST
+)
+-
+maxdepth
+1
+-
+print0
+|
+xargs
+-
+0
+(
+RM
+)
+-
+r
+;
+\
+fi
+endif
+(
+NSINSTALL
+)
+-
+D
 (
 DIST
 )
@@ -2189,6 +2389,19 @@ stage
 (
 UNMAKE_PACKAGE
 )
+make
+clobber
+-
+zip
+AB_CD
+=
+en
+-
+US
+clobber
+-
+zip
+:
 (
 RM
 )
@@ -2198,9 +2411,9 @@ STAGEDIST
 /
 chrome
 /
-en
--
-US
+(
+AB_CD
+)
 .
 jar
 \
@@ -2210,9 +2423,9 @@ STAGEDIST
 /
 chrome
 /
-en
--
-US
+(
+AB_CD
+)
 .
 manifest
 \
@@ -2268,35 +2481,43 @@ STAGEDIST
 /
 chrome
 /
-en
--
-US
-(
-RM
-)
--
-rf
-(
-DIST
-)
-/
-xpi
--
-stage
-/
-locale
--
 (
 AB_CD
 )
+unpack
+:
 (
-MAKE
+STAGEDIST
 )
-libs
+echo
+done
+unpacking
+repackage
 -
+zip
+:
+ZIP_OUT
+=
 (
-AB_CD
+_ABS_DIST
 )
+/
+(
+PACKAGE
+)
+repackage
+-
+zip
+:
+UNPACKAGE
+=
+(
+ZIP_IN
+)
+repackage
+-
+zip
+:
 ifeq
 (
 WINNT
@@ -2343,30 +2564,6 @@ STAGEDIST
 /
 uninstall
 endif
-(
-RM
-)
--
-r
-(
-DIST
-)
-/
-xpi
--
-stage
-/
-locale
--
-(
-AB_CD
-)
-/
-chrome
-/
-(
-AB_CD
-)
 cd
 (
 DIST
@@ -2501,6 +2698,92 @@ stage
 (
 MAKE_PACKAGE
 )
+#
+packaging
+done
+undo
+l10n
+stuff
+ifneq
+(
+en
+(
+AB
+)
+)
+ifneq
+(
+(
+filter
+mac
+cocoa
+(
+MOZ_WIDGET_TOOLKIT
+)
+)
+)
+mv
+(
+_ABS_DIST
+)
+/
+l10n
+-
+stage
+/
+(
+MOZ_PKG_APPNAME
+)
+/
+(
+_APPNAME
+)
+/
+Contents
+/
+Resources
+/
+(
+AB
+)
+.
+lproj
+(
+_ABS_DIST
+)
+/
+l10n
+-
+stage
+/
+(
+MOZ_PKG_APPNAME
+)
+/
+(
+_APPNAME
+)
+/
+Contents
+/
+Resources
+/
+en
+.
+lproj
+endif
+endif
+(
+MAKE
+)
+clobber
+-
+zip
+AB_CD
+=
+(
+AB_CD
+)
 (
 NSINSTALL
 )
@@ -2559,6 +2842,12 @@ zip
 ZIP_IN
 )
 (
+STAGEDIST
+)
+libs
+-
+%
+(
 MAKE
 )
 repackage
@@ -2610,6 +2899,9 @@ langpack
 -
 %
 :
+libs
+-
+%
 echo
 "
 Making
@@ -2630,35 +2922,6 @@ DIST
 (
 PKG_LANGPACK_PATH
 )
-(
-RM
-)
--
-rf
-(
-DIST
-)
-/
-xpi
--
-stage
-/
-locale
--
-(
-AB_CD
-)
-(
-MAKE
-)
-libs
--
-(
-AB_CD
-)
-USE_EXTENSION_MANIFEST
-=
-1
 (
 PERL
 )
@@ -2745,6 +3008,12 @@ install
 .
 rdf
 chrome
+/
+(
+AB_CD
+)
+.
+jar
 chrome
 .
 manifest
@@ -2839,48 +3108,29 @@ installers
 -
 %
 :
-(
-NSINSTALL
-)
+clobber
 -
-D
-(
-DIST
-)
-/
-install
-(
-MAKE
-)
+%
 langpack
 -
-*
-ifeq
-(
-WINNT
-(
-OS_ARCH
-)
-)
-(
-MAKE
-)
+%
 repackage
 -
 win32
 -
 installer
 -
-*
-endif
-(
-MAKE
-)
+%
 repackage
 -
 zip
 -
-*
+%
+echo
+"
+repackaging
+done
+"
 ifdef
 MOZ_UPDATER
 libs
@@ -3010,20 +3260,11 @@ MOZ_CRASHREPORTER
 libs
 :
 :
-(
-addprefix
-(
-LOCALE_SRCDIR
-)
-/
-crashreporter
-/
 crashreporter
 -
 override
 .
 ini
-)
 (
 SYSINSTALL
 )
@@ -3135,28 +3376,26 @@ installed
 )
 endif
 (
+cd
+(
+_ABS_DIST
+)
+&
+&
+(
 WGET
 )
 -
 nv
 -
--
-output
--
-document
-(
-_ABS_DIST
-)
-/
-(
-PACKAGE
-)
+N
 (
 EN_US_BINARY_URL
 )
 /
 (
 PACKAGE
+)
 )
 echo
 "
@@ -3197,27 +3436,20 @@ _ABS_DIST
 PKG_INST_PATH
 )
 (
+cd
+(
+_ABS_DIST
+)
+&
+&
+(
 WGET
 )
 -
 nv
 -
--
-output
--
-document
-(
-_ABS_DIST
-)
-/
-(
-PKG_INST_PATH
-)
-(
-PKG_INST_BASENAME
-)
-.
-exe
+N
+"
 (
 EN_US_BINARY_URL
 )
@@ -3230,6 +3462,8 @@ PKG_INST_BASENAME
 )
 .
 exe
+"
+)
 echo
 "
 Downloaded
@@ -3258,6 +3492,29 @@ PKG_INST_BASENAME
 )
 "
 endif
+ident
+:
+(
+PYTHON
+)
+(
+topsrcdir
+)
+/
+config
+/
+printconfigsetting
+.
+py
+(
+STAGEDIST
+)
+/
+application
+.
+ini
+App
+SourceStamp
 #
 These
 make
@@ -3612,3 +3869,40 @@ vR
 (
 UPLOAD_DIR
 )
+merge
+-
+%
+:
+ifdef
+LOCALE_MERGEDIR
+(
+RM
+)
+-
+rf
+(
+LOCALE_MERGEDIR
+)
+MACOSX_DEPLOYMENT_TARGET
+=
+compare
+-
+locales
+-
+m
+(
+LOCALE_MERGEDIR
+)
+(
+srcdir
+)
+/
+l10n
+.
+ini
+(
+L10NBASEDIR
+)
+*
+endif
+echo
