--- a/toolkit/locales/Makefile.in
+++ b/toolkit/locales/Makefile.in
@@ -465,6 +465,43 @@ config
 rules
 .
 mk
+ifdef
+LOCALE_MERGEDIR
+vpath
+crashreporter
+.
+%
+(
+LOCALE_MERGEDIR
+)
+/
+toolkit
+/
+crashreporter
+endif
+vpath
+crashreporter
+.
+%
+(
+LOCALE_SRCDIR
+)
+/
+crashreporter
+ifdef
+LOCALE_MERGEDIR
+vpath
+crashreporter
+.
+%
+srcdir
+/
+en
+-
+US
+/
+crashreporter
+endif
 libs
 -
 %
@@ -563,18 +600,9 @@ MOZ_CRASHREPORTER
 libs
 :
 :
-(
-addprefix
-(
-LOCALE_SRCDIR
-)
-/
-crashreporter
-/
 crashreporter
 .
 ini
-)
 ifneq
 (
 (
