--- a/toolkit/components/passwordmgr/test/Makefile.in
+++ b/toolkit/components/passwordmgr/test/Makefile.in
@@ -506,6 +506,10 @@ test_bug_242956
 .
 html
 \
+test_privbrowsing
+.
+html
+\
 test_bug_360493_1
 .
 html
@@ -567,6 +571,22 @@ sjs
 formsubmit
 .
 sjs
+\
+subtst_privbrowsing_1
+.
+html
+\
+subtst_privbrowsing_2
+.
+html
+\
+subtst_privbrowsing_3
+.
+html
+\
+subtst_privbrowsing_4
+.
+html
 \
 subtst_notifications_1
 .
