--- a/configure.in
+++ b/configure.in
@@ -9979,9 +9979,9 @@ uname
 r
 OS_TEST
 =
-uname
--
-p
+{
+target_cpu
+}
 ;
 ;
 BSD_386
@@ -10413,6 +10413,8 @@ powerpc
 *
 |
 ppc
+|
+rs6000
 )
 CPU_ARCH
 =
@@ -13406,13 +13408,13 @@ compiler
 version
 >
 =
-5
+6
 .
 0
 .
-2
-.
 0
+.
+3
 ]
 )
 AC_TRY_COMPILE
@@ -13425,7 +13427,7 @@ if
 (
 __IBMCPP__
 <
-502
+600
 )
 #
 error
@@ -13465,13 +13467,13 @@ C
 +
 +
 version
-5
+6
 .
 0
 .
-2
-.
 0
+.
+3
 or
 higher
 is
