Bug 258429 - "Crash at startup on mips" [sr=bsmedberg]
UltraBlame original commit: 23d35cd4547becabb678739f617974dbcec3ab7a

--- a/configure.in
+++ b/configure.in
@@ -15101,24 +15101,16 @@ MOZ_ENABLE_OLD_ABI_COMPAT_WRAPPERS
 mips
 *
 )
-CFLAGS
+MOZ_DEBUG_FLAGS
 =
 "
-CFLAGS
 -
-Wa
--
-xgot
+g
 "
-CXXFLAGS
-=
-"
-CXXFLAGS
--
-Wa
--
-xgot
-"
+#
+We
+want
+inlining
 ;
 ;
 esac
