--- a/xpcom/reflect/xptcall/src/md/unix/Makefile.in
+++ b/xpcom/reflect/xptcall/src/md/unix/Makefile.in
@@ -2463,21 +2463,13 @@ s
 xptcstubs_asm_mips
 .
 s
-#
-xptcstubs_mips
-.
-cpp
-#
-xptcstubs_asm_mips
-.
-s
-ifdef
-GNU_CC
 ASFLAGS
 +
 =
+-
+I
 (
-INCLUDES
+PUBLIC
 )
 -
 x
@@ -2486,9 +2478,6 @@ assembler
 with
 -
 cpp
--
-D__GNUC__
-endif
 endif
 endif
 #
@@ -3804,11 +3793,6 @@ xptcstubs_asm_mips
 .
 o
 :
-xptcstubs_asm_mips
-.
-s
-.
-m4
 (
 PUBLIC
 )
@@ -3816,46 +3800,6 @@ PUBLIC
 xptcstubsdef
 .
 inc
-m4
-(
-INCLUDES
-)
-<
->
-.
-/
-xptcstubs_asm_mips
-.
-s
-&
-&
-\
-(
-AS
-)
--
-o
-(
-ASFLAGS
-)
-(
-AS_DASH_C_FLAG
-)
-.
-/
-xptcstubs_asm_mips
-.
-s
-(
-RM
-)
--
-f
-.
-/
-xptcstubs_asm_mips
-.
-s
 endif
 endif
 ifeq
