Bug 438397 - "-fshort-wchar shouldn't be hardcoded in pkgconfig" [r=bsmedberg]
UltraBlame original commit: c4c46a5f96819c226600bc3aa32e348e6cbc651d

--- a/configure.in
+++ b/configure.in
@@ -22055,6 +22055,14 @@ HAVE_CPP_2BYTE_WCHAR_T
 HAVE_CPP_2BYTE_WCHAR_T
 =
 1
+WCHAR_CFLAGS
+=
+"
+-
+fshort
+-
+wchar
+"
 else
 CXXFLAGS
 =
@@ -68652,6 +68660,10 @@ LIBS
 AC_SUBST
 (
 CROSS_COMPILE
+)
+AC_SUBST
+(
+WCHAR_CFLAGS
 )
 AC_SUBST
 (
