Default plugin should communicate type via plist instead of PkgInfo. b=460836 r=smichaud sr=roc
UltraBlame original commit: 771466eccb99ccf27632270c4c53365af8ac2bc7

--- a/modules/plugin/default/mac/Info-DefaultPlugin.plist
+++ b/modules/plugin/default/mac/Info-DefaultPlugin.plist
@@ -27,7 +27,6 @@ PUBLIC
 /
 /
 Apple
-Computer
 /
 /
 DTD
@@ -133,9 +132,9 @@ key
 <
 string
 >
-com
+org
 .
-netscape
+mozilla
 .
 DefaultPlugin
 <
@@ -172,22 +171,6 @@ key
 string
 >
 NSPL
-<
-/
-string
->
-<
-key
->
-CFBundleSignature
-<
-/
-key
->
-<
-string
->
-MOSS
 <
 /
 string
