Bug 456275 - In (Brief/Full) log of (test) builds, remind leak threshold on known leak too (Av2) sync and extend
UltraBlame original commit: 1b5146eb5738c8df3f1e8b34bce1571a47904454

--- a/testing/mochitest/runtests.py.in
+++ b/testing/mochitest/runtests.py.in
@@ -3036,9 +3036,6 @@ d
 )
 "
 )
-thresholdExceeded
-=
-False
 seenTotal
 =
 False
@@ -3161,14 +3158,20 @@ name
 seenTotal
 =
 True
+#
+Check
+for
+leaks
+.
 if
+bytesLeaked
+<
+0
+or
 bytesLeaked
 >
 threshold
 :
-thresholdExceeded
-=
-True
 prefix
 =
 "
@@ -3178,10 +3181,8 @@ UNEXPECTED
 -
 FAIL
 "
-log
-.
-info
-(
+leakLog
+=
 "
 TEST
 -
@@ -3194,38 +3195,27 @@ runtests
 leaks
 |
 leaked
-%
-d
+"
++
+\
+str
+(
+bytesLeaked
+)
++
+"
 bytes
 during
 test
 execution
-(
-should
 "
-"
-have
-leaked
-no
-more
-than
-%
-d
-bytes
-)
-"
-bytesLeaked
-threshold
-)
 elif
 bytesLeaked
 >
 0
 :
-log
-.
-info
-(
+leakLog
+=
 "
 TEST
 -
@@ -3237,21 +3227,24 @@ leaks
 |
 WARNING
 leaked
-%
-d
+"
++
+\
+str
+(
+bytesLeaked
+)
++
+"
 bytes
 during
 test
 execution
 "
-bytesLeaked
-)
 else
 :
-log
-.
-info
-(
+leakLog
+=
 "
 TEST
 -
@@ -3266,6 +3259,76 @@ leaks
 detected
 !
 "
+#
+Remind
+the
+threshold
+if
+it
+is
+not
+0
+which
+is
+the
+goal
+.
+if
+threshold
+!
+=
+0
+:
+leakLog
++
+=
+(
+threshold
+=
+=
+INFINITY
+)
+\
+and
+(
+"
+(
+no
+threshold
+set
+)
+"
+)
+\
+or
+(
+"
+(
+threshold
+set
+at
+"
++
+str
+(
+threshold
+)
++
+"
+bytes
+)
+"
+)
+#
+Log
+the
+information
+.
+log
+.
+info
+(
+leakLog
 )
 else
 :
@@ -3276,7 +3339,10 @@ numLeaked
 0
 :
 if
+abs
+(
 numLeaked
+)
 >
 1
 :
