Bug 324121 - (EM Patch) Extensions with available updates for the next version of the app should not be listed in app update extension will be disabled warning. r=dtownsend
UltraBlame original commit: 4f23875d24e2c85688b229a44ee64dd92984cc8f

--- a/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
+++ b/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
@@ -18959,6 +18959,8 @@ this
 .
 datasource
 )
+null
+null
 )
 ;
 }
@@ -39351,6 +39353,8 @@ items
 itemCount
 updateCheckType
 listener
+appVersion
+platformVersion
 )
 {
 for
@@ -39430,6 +39434,8 @@ items
 length
 updateCheckType
 listener
+appVersion
+platformVersion
 )
 ;
 }
@@ -44173,15 +44179,22 @@ we
 also
 want
 to
-update
+check
+for
 compatibility
 metadata
 and
-look
-for
 newer
 #
 versions
+that
+will
+make
+the
+add
+-
+on
+compatible
 .
 #
 3
@@ -44271,7 +44284,54 @@ aItems
 aItemCount
 aUpdateCheckType
 aListener
+aAppVersion
+aPlatformVersion
 )
+{
+if
+(
+aUpdateCheckType
+=
+=
+Ci
+.
+nsIExtensionManager
+.
+UPDATE_NOTIFY_NEWVERSION
+)
+{
+this
+.
+_listener
+=
+aListener
+;
+this
+.
+_appVersion
+=
+aAppVersion
+?
+aAppVersion
+:
+gApp
+.
+version
+;
+this
+.
+_platformVersion
+=
+aPlatformVersion
+?
+aPlatformVersion
+:
+gApp
+.
+platformVersion
+;
+}
+else
 {
 this
 .
@@ -44286,6 +44346,23 @@ this
 _emDS
 )
 ;
+this
+.
+_appVersion
+=
+gApp
+.
+version
+;
+this
+.
+_platformVersion
+=
+gApp
+.
+platformVersion
+;
+}
 if
 (
 this
@@ -44904,13 +44981,13 @@ targetAppID
 TOOLKIT_ID
 )
 ?
-gApp
+this
 .
-version
+_appVersion
 :
-gApp
+this
 .
-platformVersion
+_platformVersion
 ;
 var
 min
@@ -45225,6 +45302,7 @@ function
 escapeAddonURI
 (
 aItem
+aAppVersion
 aURI
 aDS
 )
@@ -45507,6 +45585,10 @@ APP_VERSION
 %
 /
 g
+aAppVersion
+?
+aAppVersion
+:
 gApp
 .
 version
@@ -45570,6 +45652,23 @@ APP_LOCALE
 /
 g
 gLocale
+)
+;
+aURI
+=
+aURI
+.
+replace
+(
+/
+%
+CURRENT_APP_VERSION
+%
+/
+g
+gApp
+.
+version
 )
 ;
 /
@@ -46074,6 +46173,16 @@ Ci
 nsIExtensionManager
 .
 UPDATE_CHECK_NEWVERSION
+|
+|
+aUpdateCheckType
+=
+=
+Ci
+.
+nsIExtensionManager
+.
+UPDATE_NOTIFY_NEWVERSION
 )
 &
 &
@@ -46218,6 +46327,11 @@ dsURI
 escapeAddonURI
 (
 aItem
+this
+.
+_updater
+.
+_appVersion
 dsURI
 emDS
 )
@@ -48155,6 +48269,18 @@ Ci
 nsIExtensionManager
 .
 UPDATE_CHECK_NEWVERSION
+|
+|
+this
+.
+_updateCheckType
+=
+=
+Ci
+.
+nsIExtensionManager
+.
+UPDATE_NOTIFY_NEWVERSION
 )
 {
 /
@@ -48218,11 +48344,9 @@ _parseV20UpdateInfo
 (
 aDatasource
 aLocalItem
-Ci
+this
 .
-nsIExtensionManager
-.
-UPDATE_CHECK_NEWVERSION
+_updateCheckType
 )
 ;
 if
@@ -48421,6 +48545,7 @@ STATUS_NONE
 ;
 if
 (
+(
 this
 .
 _updateCheckType
@@ -48431,6 +48556,19 @@ Ci
 nsIExtensionManager
 .
 UPDATE_CHECK_NEWVERSION
+|
+|
+this
+.
+_updateCheckType
+=
+=
+Ci
+.
+nsIExtensionManager
+.
+UPDATE_NOTIFY_NEWVERSION
+)
 &
 &
 newerItem
@@ -49383,6 +49521,7 @@ aNewestVersionFound
 ;
 if
 (
+(
 aUpdateCheckType
 =
 =
@@ -49391,6 +49530,17 @@ Ci
 nsIExtensionManager
 .
 UPDATE_CHECK_NEWVERSION
+|
+|
+aUpdateCheckType
+=
+=
+Ci
+.
+nsIExtensionManager
+.
+UPDATE_NOTIFY_NEWVERSION
+)
 ?
 result
 <
@@ -49545,6 +49695,16 @@ Ci
 nsIExtensionManager
 .
 UPDATE_CHECK_NEWVERSION
+|
+|
+aUpdateCheckType
+=
+=
+Ci
+.
+nsIExtensionManager
+.
+UPDATE_NOTIFY_NEWVERSION
 )
 {
 /
@@ -62604,6 +62764,7 @@ getItemForID
 (
 id
 )
+null
 uri
 this
 )
