Fix for bug 460940 (Dependency problem when removing an interface from dom_quickstubs.qsconf). r=ted.
UltraBlame original commit: ab5396e854d7d2b403290e2e22c15a9657e7935c

--- a/js/src/xpconnect/src/Makefile.in
+++ b/js/src/xpconnect/src/Makefile.in
@@ -1058,9 +1058,13 @@ cpp
 makedepend
 -
 output
-dom_quickstubs
+(
+MDDEPDIR
+)
+/
+dom_qsgen
 .
-depends
+pp
 \
 (
 srcdir
@@ -1081,15 +1085,14 @@ dom_quickstubs
 .
 cpp
 \
-dom_quickstubs
+(
+MDDEPDIR
+)
+/
+dom_qsgen
 .
-depends
+pp
 \
 (
 NULL
 )
--
-include
-dom_quickstubs
-.
-depends
