--- a/js/src/xpconnect/tests/mochitest/Makefile.in
+++ b/js/src/xpconnect/tests/mochitest/Makefile.in
@@ -440,6 +440,10 @@ rules
 mk
 _TEST_FILES
 =
+inner
+.
+html
+\
 test_bug361111
 .
 xul
@@ -449,6 +453,10 @@ test_bug390488
 html
 \
 test_bug393269
+.
+html
+\
+test_bug396851
 .
 html
 \
