Bug 461281 -  CPU usage goes to 100% after playing some Ogg files - r+sr=roc
UltraBlame original commit: 8493c800cc20ba87d3f4c90165ccacc0d4adffa7

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -448,6 +448,10 @@ test_autoplay
 .
 html
 \
+test_bug461281
+.
+html
+\
 test_constants
 .
 html
@@ -541,6 +545,10 @@ test_volume
 html
 \
 320x240
+.
+ogg
+\
+bug461281
 .
 ogg
 \
