Bug 460871 - fire timeupdate event when playback position changes - r+sr=roc
UltraBlame original commit: 9f3f0b99cf37105b55007736db910af5060edb2b

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -524,6 +524,18 @@ test_seek8
 .
 html
 \
+test_timeupdate1
+.
+html
+\
+test_timeupdate2
+.
+html
+\
+test_timeupdate3
+.
+html
+\
 test_volume
 .
 html
