Bug 460999 - Generate inheritance graphs for the base of the string hierarchy and upload them to MDC with image maps r=jorendorff
UltraBlame original commit: 6a2e65f15f480c149f478ac92d5c515f37c28df9

--- a/xpcom/analysis/Makefile.in
+++ b/xpcom/analysis/Makefile.in
@@ -54,18 +54,6 @@ nsAString_internal
 \
 nsACString_internal
 \
-nsString
-\
-nsCString
-\
-nsAutoString
-\
-nsCAutoString
-\
-nsXPIDLString
-\
-nsXPIDLCString
-\
 (
 NULL
 )
@@ -146,6 +134,9 @@ HGREV
 classapi
 :
 (
+MDDEPDIR
+)
+(
 CCC
 )
 (
@@ -169,6 +160,100 @@ type
 printer
 .
 cpp
+>
+classapi
+.
+out
+2
+>
+&
+1
+perl
+-
+e
+'
+while
+(
+<
+>
+)
+{
+if
+(
+/
+DUMP
+-
+TYPE
+\
+(
+(
+.
+*
+)
+\
+)
+/
+)
+{
+print
+"
+1
+"
+;
+}
+}
+'
+<
+classapi
+.
+out
+>
+dumptypes
+.
+list
+perl
+-
+e
+'
+while
+(
+<
+>
+)
+{
+if
+(
+/
+GRAPH
+-
+TYPE
+\
+(
+(
+.
+*
+)
+\
+)
+/
+)
+{
+print
+"
+1
+"
+;
+}
+}
+'
+<
+classapi
+.
+out
+>
+graphtypes
+.
+list
 (
 EXIT_ON_ERROR
 )
@@ -176,9 +261,57 @@ EXIT_ON_ERROR
 for
 class
 in
+cat
+graphtypes
+.
+list
+;
+do
+\
+dot
+-
+Tpng
+-
+o
+{
+class
+}
+-
+graph
+.
+png
+-
+Tcmapx
+-
+o
+{
+class
+}
+-
+graph
+.
+map
+{
+class
+}
+-
+graph
+.
+gv
+;
+\
+done
 (
-DUMP_CLASSES
+EXIT_ON_ERROR
 )
+\
+for
+class
+in
+cat
+dumptypes
+.
+list
 ;
 do
 \
@@ -216,12 +349,17 @@ html
 done
 upload_classapi
 :
+(
+EXIT_ON_ERROR
+)
+\
 for
 class
 in
-(
-DUMP_CLASSES
-)
+cat
+dumptypes
+.
+list
 ;
 do
 \
@@ -252,3 +390,91 @@ class
 ;
 \
 done
+(
+EXIT_ON_ERROR
+)
+\
+for
+class
+in
+cat
+graphtypes
+.
+list
+;
+do
+\
+(
+PYTHON
+)
+(
+srcdir
+)
+/
+MDC
+-
+attach
+.
+py
+{
+class
+}
+-
+graph
+.
+png
+en
+/
+{
+class
+}
+"
+image
+/
+png
+"
+"
+Class
+inheritance
+graph
+"
+;
+\
+done
+GARBAGE
++
+=
+(
+wildcard
+*
+.
+html
+)
+(
+wildcard
+*
+.
+png
+)
+(
+wildcard
+*
+.
+map
+)
+\
+(
+wildcard
+*
+.
+gv
+)
+classapi
+.
+out
+graphtypes
+.
+list
+dumptypes
+.
+list
