bug 461513, windows en-US installers downloaded in wrong location for l10n repacks, r=ted
UltraBlame original commit: 2f712b4d7106c75146f724dbc4a2e751b93eee13

--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -3440,6 +3440,10 @@ cd
 (
 _ABS_DIST
 )
+/
+(
+PKG_INST_PATH
+)
 &
 &
 (
@@ -3490,6 +3494,8 @@ PKG_INST_PATH
 (
 PKG_INST_BASENAME
 )
+.
+exe
 "
 endif
 ident
