Bug 450015 - Remove support for extensions=all, since this is exactly why we can't have nice things, r=ted
UltraBlame original commit: b10cc446eb4c941533701f43649b13cedeef44d0

--- a/configure.in
+++ b/configure.in
@@ -34624,31 +34624,6 @@ MOZ_DBGRINFO_MODULES
 MOZ_ENABLE_CANVAS
 =
 1
-MOZ_EXTENSIONS_ALL
-=
-"
-wallet
-p3p
-venkman
-inspector
-irc
-typeaheadfind
-gnomevfs
-sroaming
-datetime
-finger
-cview
-layout
--
-debug
-tasks
-sql
-xforms
-schema
--
-validation
-reporter
-"
 MOZ_FEEDS
 =
 1
@@ -44321,12 +44296,23 @@ all
 "
 ;
 then
-MOZ_EXTENSIONS
+AC_MSG_ERROR
+(
+[
+-
+-
+enable
+-
+extensions
 =
-"
-MOZ_EXTENSIONS
-MOZ_EXTENSIONS_ALL
-"
+option
+is
+no
+longer
+supported
+.
+]
+)
 elif
 test
 "
