--- a/js/src/Makefile.ref
+++ b/js/src/Makefile.ref
@@ -545,6 +545,48 @@ DEFINES
 DNARCISSUS
 endif
 #
+ifdef
+INTEL_CC
+CXX
+=
+/
+opt
+/
+intel
+/
+Compiler
+/
+11
+.
+0
+/
+054
+/
+bin
+/
+ia32
+/
+icpc
+CC
+=
+(
+CXX
+)
+CCC
+=
+(
+CXX
+)
+CFLAGS
++
+=
+-
+m32
+-
+w
+#
+endif
+#
 Look
 in
 OBJDIR
