Bug 461359 - Make nsTreeBodyFrame not implement nsITreeBoxObject... nsTreeBoxObject can just call the methods on nsTreeBodyFrame directly, and we avoid nsISupports oddities for bug 396185 r=Enn sr=roc
UltraBlame original commit: 773851e3b10b448adc19921dd851a37b3c6b2c7a

--- a/content/events/src/Makefile.in
+++ b/content/events/src/Makefile.in
@@ -756,6 +756,33 @@ base
 /
 src
 \
+-
+I
+(
+srcdir
+)
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+layout
+/
+xul
+/
+base
+/
+src
+/
+tree
+/
+src
+\
 (
 NULL
 )
