Bug 449518 - Video autostart after doing Back/Forward history button on browser - r+sr=roc
UltraBlame original commit: bb3a920e7cfe40bc69129859007e5d757a820fcb

--- a/layout/base/Makefile.in
+++ b/layout/base/Makefile.in
@@ -1032,6 +1032,32 @@ base
 /
 src
 endif
+ifdef
+MOZ_MEDIA
+LOCAL_INCLUDES
++
+=
+\
+-
+I
+(
+srcdir
+)
+/
+.
+.
+/
+.
+.
+/
+content
+/
+html
+/
+content
+/
+src
+endif
 CXXFLAGS
 +
 =
