Backed out changeset 7f708623bf59 (from bug 322475, which made us construct all our image loaders at frame construction time) because of issues with propagation of backgrounds to the canvas (bug 460796).
UltraBlame original commit: 01e2b22db875bc378c6668f160a7ef4630806295

--- a/layout/base/Makefile.in
+++ b/layout/base/Makefile.in
@@ -662,7 +662,7 @@ nsGenConList
 .
 cpp
 \
-nsImageLoadNotifier
+nsImageLoader
 .
 cpp
 \
@@ -854,25 +854,6 @@ srcdir
 .
 .
 /
-xul
-/
-base
-/
-src
-/
-tree
-/
-src
-\
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
 .
 .
 /
@@ -1029,32 +1010,6 @@ srcdir
 svg
 /
 base
-/
-src
-endif
-ifdef
-MOZ_MEDIA
-LOCAL_INCLUDES
-+
-=
-\
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-.
-.
-/
-content
-/
-html
-/
-content
 /
 src
 endif
