back out changeset 47259b642835, b=456662
UltraBlame original commit: a935c0b1617856bc62d2aa0f2d12b3e109f831d8

--- a/configure.in
+++ b/configure.in
@@ -13977,6 +13977,21 @@ MOZ_DEBUG_LDFLAGS
 framework
 ExceptionHandling
 "
+#
+set
+MACOSX
+to
+generate
+lib
+/
+mac
+/
+MoreFiles
+/
+Makefile
+MACOSX
+=
+1
 dnl
 DTrace
 and
