--- a/modules/libreg/standalone/Makefile.in
+++ b/modules/libreg/standalone/Makefile.in
@@ -439,6 +439,23 @@ libreg
 LIBRARY_NAME
 =
 mozregsa_s
+#
+MacOSX
+requires
+the
+MoreFiles
+module
+ifeq
+(
+(
+OS_ARCH
+)
+Darwin
+)
+REQUIRES
+=
+macmorefiles
+endif
 ifeq
 (
 (
