--- a/xpcom/MoreFiles/Makefile.in
+++ b/xpcom/MoreFiles/Makefile.in
@@ -142,10 +142,7 @@ The
 Original
 Code
 is
-mozilla
-.
-org
-code
+Mozilla
 .
 #
 #
@@ -160,7 +157,6 @@ is
 #
 Netscape
 Communications
-Corporation
 .
 #
 Portions
@@ -174,7 +170,7 @@ Copyright
 (
 C
 )
-1998
+2001
 #
 the
 Initial
@@ -411,56 +407,14 @@ autoconf
 mk
 MODULE
 =
-xpcom_obsolete
-LIBRARY_NAME
-=
-xpcom_compat
-ifneq
-(
-(
-filter
--
-out
-WINNT
-WINCE
-(
-OS_ARCH
-)
-)
-)
-SHORT_LIBNAME
-=
-xpcomct
-endif
-GRE_MODULE
-=
-1
-LIBXUL_LIBRARY
-=
-1
-PACKAGE_FILE
-=
-xpcomobsolete
-.
-pkg
-DIRS
-=
-component
+macmorefiles
 REQUIRES
 =
-xpcom
-\
-string
-\
-(
-NULL
-)
 #
-pull
-in
-MoreFiles
+ifeq
 for
-MacOSX
+standalone
+builds
 ifneq
 (
 (
@@ -472,147 +426,64 @@ MOZ_WIDGET_TOOLKIT
 )
 )
 )
-REQUIRES
-+
+LIBRARY_NAME
 =
-macmorefiles
-endif
-CPPSRCS
+macmorefiles_s
+CSRCS
 =
 \
-nsFileSpec
+MoreFilesX
 .
-cpp
+c
 \
-nsFileStream
+FSCopyObject
 .
-cpp
-\
-nsIFileStream
-.
-cpp
-\
-nsFileSpecImpl
-.
-cpp
+c
 \
 (
 NULL
 )
-ifeq
-(
-(
-filter
--
-out
-WINNT
-WINCE
-OS2
-(
-OS_ARCH
-)
-)
-)
-REQUIRES
-+
-=
-libreg
-ifndef
-MOZ_ENABLE_LIBXUL
-CPPSRCS
-+
-=
-dlldeps
--
-obs
-.
-cpp
-endif
-endif
 EXPORTS
++
 =
 \
-xpcomobsolete
+MoreFilesX
 .
 h
 \
-nsFileSpec
+FSCopyObject
 .
 h
-\
-nsFileStream
-.
-h
-\
-nsIFileStream
-.
-h
-\
-nsIRegistryUtils
-.
-h
-\
-(
-NULL
-)
-LOCAL_INCLUDES
-=
-\
--
-I
-.
-.
-\
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-io
-\
-(
-NULL
-)
-XPIDLSRCS
-=
-nsIFileSpec
-.
-idl
-\
-nsIRegistry
-.
-idl
 \
 (
 NULL
 )
 #
-Force
-use
+we
+don
+'
+t
+want
+the
+shared
+lib
+but
+we
+want
+to
+force
+the
+creation
 of
-PIC
-FORCE_USE_PIC
+a
+#
+static
+lib
+.
+FORCE_STATIC_LIB
 =
 1
-#
-due
-to
-symbol
-conflicts
-on
-win32
-this
-needs
-to
-be
-shared
-ifndef
-MOZ_ENABLE_LIBXUL
-FORCE_SHARED_LIB
+FORCE_USE_PIC
 =
 1
 endif
@@ -626,127 +497,3 @@ config
 rules
 .
 mk
-DEFINES
-+
-=
--
-D_IMPL_NS_COM_OBSOLETE
-EXTRA_DSO_LDOPTS
-+
-=
-\
-(
-DEPTH
-)
-/
-modules
-/
-libreg
-/
-src
-/
-(
-LIB_PREFIX
-)
-mozreg_s
-.
-(
-LIB_SUFFIX
-)
-\
-(
-MOZ_COMPONENT_LIBS
-)
-\
-(
-NULL
-)
-ifneq
-(
-(
-filter
-mac
-cocoa
-(
-MOZ_WIDGET_TOOLKIT
-)
-)
-)
-CXXFLAGS
-+
-=
-(
-TK_CFLAGS
-)
-EXTRA_DSO_LDOPTS
-+
-=
-(
-TK_LIBS
-)
-endif
-ifeq
-(
-(
-OS_ARCH
-)
-BeOS
-)
-EXTRA_DSO_LDOPTS
-+
-=
--
-lbe
-endif
-ifeq
-(
-(
-OS_ARCH
-)
-WINNT
-)
-EXTRA_DSO_LDOPTS
-+
-=
-(
-call
-EXPAND_LIBNAME
-shell32
-ole32
-)
-ifneq
-(
-(
-MOZ_DEBUG
-)
-(
-NS_TRACE_MALLOC
-)
-)
-EXTRA_DSO_LDOPTS
-+
-=
-(
-call
-EXPAND_LIBNAME
-imagehlp
-)
-endif
-ifdef
-GNU_CXX
-DSO_LDOPTS
-+
-=
--
-Wl
--
--
-export
--
-all
--
-symbols
-endif
-endif
-#
-WINNT
