--- a/modules/libreg/src/Makefile.in
+++ b/modules/libreg/src/Makefile.in
@@ -428,6 +428,23 @@ mozreg_s
 DIST_INSTALL
 =
 1
+#
+MacOSX
+requires
+the
+MoreFiles
+module
+ifeq
+(
+(
+OS_ARCH
+)
+Darwin
+)
+REQUIRES
+=
+macmorefiles
+endif
 CSRCS
 =
 (
@@ -508,6 +525,28 @@ SDK_LIBRARY
 (
 LIBRARY
 )
+ifeq
+(
+cocoa
+(
+MOZ_WIDGET_TOOLKIT
+)
+)
+SHARED_LIBRARY_LIBS
++
+=
+(
+DEPTH
+)
+/
+xpcom
+/
+MoreFiles
+/
+libmacmorefiles_s
+.
+a
+endif
 include
 (
 topsrcdir
