--- a/xpcom/io/Makefile.in
+++ b/xpcom/io/Makefile.in
@@ -460,6 +460,18 @@ MOZ_OPTIMIZE_SIZE_TWEAK
 )
 endif
 endif
+ifeq
+(
+(
+MOZ_WIDGET_TOOLKIT
+)
+cocoa
+)
+REQUIRES
++
+=
+macmorefiles
+endif
 CPPSRCS
 =
 \
