--- a/browser/components/certerror/Makefile.in
+++ b/browser/components/certerror/Makefile.in
@@ -1,4 +1,5 @@
 #
+#
 *
 *
 *
@@ -141,9 +142,9 @@ The
 Original
 Code
 is
-the
-Mozilla
-Browser
+mozilla
+.
+org
 code
 .
 #
@@ -173,7 +174,7 @@ Copyright
 (
 C
 )
-2002
+1998
 #
 the
 Initial
@@ -190,15 +191,6 @@ Contributor
 s
 )
 :
-#
-Brian
-Ryner
-<
-bryner
-brianryner
-.
-com
->
 #
 #
 Alternatively
@@ -397,6 +389,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -416,88 +411,36 @@ config
 autoconf
 .
 mk
-MODULE
+ifdef
+ENABLE_TESTS
+DIRS
++
 =
-browsercomps
-XPIDL_MODULE
-=
-browsercompsbase
-XPIDLSRCS
-=
-\
-nsIBrowserHandler
-.
-idl
-\
-nsIBrowserGlue
-.
-idl
-\
-(
-NULL
-)
+test
+endif
+#
+EXTRA_COMPONENTS
+installs
+components
+written
+in
+JS
+to
+dist
+/
+bin
+/
+components
 EXTRA_PP_COMPONENTS
 =
 \
-nsBrowserContentHandler
-.
-js
-\
-nsBrowserGlue
-.
-js
-\
-aboutRobots
+aboutCertError
 .
 js
 \
 (
 NULL
 )
-EXTRA_JS_MODULES
-=
-distribution
-.
-js
-DIRS
-=
-\
-certerror
-\
-dirprovider
-\
-microsummaries
-\
-migration
-\
-preferences
-\
-search
-\
-sessionstore
-\
-shell
-\
-sidebar
-\
-feeds
-\
-places
-\
-(
-NULL
-)
-ifdef
-MOZ_SAFE_BROWSING
-DIRS
-+
-=
-safebrowsing
-endif
-DIRS
-+
-=
-build
 include
 (
 topsrcdir
