--- a/browser/components/certerror/test/Makefile.in
+++ b/browser/components/certerror/test/Makefile.in
@@ -1,4 +1,5 @@
 #
+#
 *
 *
 *
@@ -141,9 +142,9 @@ The
 Original
 Code
 is
-the
-Mozilla
-Browser
+mozilla
+.
+org
 code
 .
 #
@@ -157,8 +158,7 @@ Original
 Code
 is
 #
-Netscape
-Communications
+Mozilla
 Corporation
 .
 #
@@ -173,7 +173,7 @@ Copyright
 (
 C
 )
-2002
+2008
 #
 the
 Initial
@@ -191,11 +191,11 @@ s
 )
 :
 #
-Brian
-Ryner
+Johnathan
+Nightingale
 <
-bryner
-brianryner
+johnath
+mozilla
 .
 com
 >
@@ -216,6 +216,7 @@ terms
 of
 #
 either
+of
 the
 GNU
 General
@@ -231,8 +232,8 @@ the
 GPL
 "
 )
-or
 #
+or
 the
 GNU
 Lesser
@@ -397,6 +398,12 @@ DEPTH
 /
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -406,6 +413,15 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+browser
+/
+components
+/
+certerror
+/
+test
 include
 (
 DEPTH
@@ -416,88 +432,6 @@ config
 autoconf
 .
 mk
-MODULE
-=
-browsercomps
-XPIDL_MODULE
-=
-browsercompsbase
-XPIDLSRCS
-=
-\
-nsIBrowserHandler
-.
-idl
-\
-nsIBrowserGlue
-.
-idl
-\
-(
-NULL
-)
-EXTRA_PP_COMPONENTS
-=
-\
-nsBrowserContentHandler
-.
-js
-\
-nsBrowserGlue
-.
-js
-\
-aboutRobots
-.
-js
-\
-(
-NULL
-)
-EXTRA_JS_MODULES
-=
-distribution
-.
-js
-DIRS
-=
-\
-certerror
-\
-dirprovider
-\
-microsummaries
-\
-migration
-\
-preferences
-\
-search
-\
-sessionstore
-\
-shell
-\
-sidebar
-\
-feeds
-\
-places
-\
-(
-NULL
-)
-ifdef
-MOZ_SAFE_BROWSING
-DIRS
-+
-=
-safebrowsing
-endif
-DIRS
-+
-=
-build
 include
 (
 topsrcdir
@@ -508,3 +442,44 @@ config
 rules
 .
 mk
+_BROWSER_FILES
+=
+browser_bug431826
+.
+js
+\
+(
+NULL
+)
+libs
+:
+:
+(
+_BROWSER_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+browser
+/
+(
+relativesrcdir
+)
