New default plugin for Mac OS X. b=428973 r/sr=jst
UltraBlame original commit: 47750fc03102af68a26cdc9eeac9cacffb9bf30c

--- a/modules/plugin/default/mac/Info.plist
+++ b/modules/plugin/default/mac/Info.plist
@@ -76,6 +76,111 @@ dict
 <
 key
 >
+WebPluginMIMETypes
+<
+/
+key
+>
+<
+dict
+>
+<
+key
+>
+*
+<
+/
+key
+>
+<
+dict
+>
+<
+key
+>
+WebPluginExtensions
+<
+/
+key
+>
+<
+array
+>
+<
+string
+>
+*
+<
+/
+string
+>
+<
+/
+array
+>
+<
+key
+>
+WebPluginTypeDescription
+<
+/
+key
+>
+<
+string
+>
+All
+types
+<
+/
+string
+>
+<
+/
+dict
+>
+<
+/
+dict
+>
+<
+key
+>
+WebPluginDescription
+<
+/
+key
+>
+<
+string
+>
+Gecko
+default
+plugin
+<
+/
+string
+>
+<
+key
+>
+WebPluginName
+<
+/
+key
+>
+<
+string
+>
+Default
+Plugin
+<
+/
+string
+>
+<
+key
+>
 CFBundleDevelopmentRegion
 <
 /
@@ -100,23 +205,9 @@ key
 <
 string
 >
-Default
-Plugin
-<
-/
-string
->
-<
-key
->
-CFBundleIconFile
-<
-/
-key
->
-<
-string
->
+{
+EXECUTABLE_NAME
+}
 <
 /
 string
@@ -186,28 +277,12 @@ key
 <
 string
 >
-1
+2
 .
 0
-.
-0
-.
-15
 <
 /
 string
->
-<
-key
->
-CSResourcesFileMapped
-<
-/
-key
->
-<
-true
-/
 >
 <
 /
