--- a/modules/plugin/default/mac/Makefile.in
+++ b/modules/plugin/default/mac/Makefile.in
@@ -438,7 +438,7 @@ ifdef
 MOZ_DEBUG
 BUILDSTYLE
 =
-Development
+Debug
 else
 BUILDSTYLE
 =
@@ -464,14 +464,8 @@ PBBUILD_SETTINGS
 TARGET
 =
 "
-Default
-Plugin
+DefaultPlugin
 "
-PACKAGE_FILE
-=
-npnul
-.
-pkg
 unexport
 CC
 CXX
@@ -550,29 +544,9 @@ fs
 srcdir
 )
 /
-DefaultPluginPrefix
+DefaultPlugin
 .
-h
-ln
--
-fs
-(
-srcdir
-)
-/
-NullPlugin
-.
-cpp
-ln
--
-fs
-(
-srcdir
-)
-/
-npmac
-.
-cpp
+mm
 ln
 -
 fs
@@ -581,11 +555,8 @@ srcdir
 )
 /
 Info
--
-*
 .
 plist
-.
 ln
 -
 fs
@@ -593,9 +564,9 @@ fs
 srcdir
 )
 /
-NullPlugin
+plugin
 .
-rsrc
+png
 GARBAGE_DIRS
 +
 =
@@ -610,27 +581,17 @@ English
 .
 lproj
 \
-DefaultPluginPrefix
+DefaultPlugin
 .
-h
-\
-NullPlugin
-.
-cpp
-\
-npmac
-.
-cpp
+mm
 \
 Info
--
-*
 .
 plist
 \
-NullPlugin
+plugin
 .
-rsrc
+png
 \
 (
 NULL
@@ -662,8 +623,7 @@ INSTALL
 XCODE_PRODUCT_DIR
 )
 /
-Default
-Plugin
+DefaultPlugin
 .
 plugin
 "
@@ -690,7 +650,7 @@ target
 TARGET
 )
 -
-buildstyle
+configuration
 (
 BUILDSTYLE
 )
